# orion-research

./: .env.example  .gitignore  .gitmodules  AG_EVALUATION_README.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_SUMMARY.md  ARCHITECTURE_UPDATE.md  AUDIT_AND_DEBUG_COMPLETE.md  BACKEND_STATUS.md  BASELINE_COMPARISON_README.md  BASELINE_IMPLEMENTATION_SUMMARY.md  BASELINE_QUICK_START.md  BASELINE_UPDATE_LOG.md  CIS_DIAGNOSTICS_GUIDE.py  CIS_INVESTIGATION_COMPLETE.md  CIS_QUICK_REFERENCE.md  CIS_TESTING_SUMMARY.md  CIS_TRAINING_GUIDE.md  CLEANUP_AND_TESTING_REPORT.md  CLEANUP_AUDIT.md  CLEANUP_AUDIT.sh  CLEANUP_GAMEPLAN.md  CLEANUP_SUMMARY.md  CLI_INTEGRATION_COMPLETED.md  COMPLETE_SYSTEM_STATE.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  CONFIG_CONSOLIDATION_COMPLETE.md  CONVERSATION_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  DINOV3_CODE_CHANGES.md  DINOV3_COMPLETION_REPORT.md  DINOV3_IMPLEMENTATION_COMPLETE.md  DINOV3_IMPLEMENTATION_GUIDE.md  DINOV3_IMPLEMENTATION_SUMMARY.md  DINOV3_INTEGRATION_COMPLETE.md  DINOV3_INTEGRATION_SUMMARY.md  DINOV3_QUICK_REFERENCE.md  (+169 more)
.archive/: advanced_reid.py  enhanced_spatial_reasoning.py  pipeline_adapter.py  projection_3d.py  query_intelligence.py  semantic_scale.py  spatial_nlg.py
.github/: copilot-instructions.md
_archive/: SGG_EVALUATION_REPORT.md  SGG_INTERIM_STATUS.md  SGG_OPTIMIZATION_PLAN.md  sgg_recall_filtered_results.json  sgg_recall_results.json
data/: README.md
debug_depth_output/: README_ANALYSIS.md
docs/: 3D_CIS_INTEGRATION.md  ACCURACY_IMPROVEMENT_PLAN.md  ARCHITECTURE_CLEANUP_PLAN.md  ARKIT_INTEGRATION.md  BACKEND_BENCHMARK_RESULTS.md  CIS_COMPLETE_GUIDE.md  CIS_FINDINGS_SUMMARY.md  CIS_FIXES_APPLIED.md  CIS_IMPLEMENTATION_CHECKLIST.md  CIS_QUICK_REFERENCE.md  CIS_STATUS_REPORT.md  CIS_TEMPORAL_TESTING_GUIDE.py  CIS_TRAINING_GUIDE.md  CIS_VERIFICATION_COMPLETE.md  CLASS_CORRECTION_IMPROVEMENTS.md  CLASS_CORRECTION_TECHNICAL.md  CLIP_INTEGRATION_SUMMARY.md  CLI_INTERACTIVE_GUIDE.md  CLUSTERING_DEBUG.md  CLUSTERING_FIX.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_FIX.md  CONTEXTUAL_UNDERSTANDING_COMPLETE.md  CORRECTION_VISUAL_FLOW.md  DEEP_CIS_INVESTIGATION.py  DETECTION_IMPROVEMENTS_SUMMARY.md  DEVELOPER_GUIDE.md  EGO4D_BENCHMARK_RESEARCH.md  EGO4D_EVAL_PLAN.md  EMBEDDING_GEMMA_GUIDE.md  EMBEDDING_GEMMA_QUICKSTART.md  ENHANCED_KG_SUMMARY.md  ENHANCED_KNOWLEDGE_GRAPH.md  EVALUATION.md  EVALUATION_FRAMEWORK.md  EVALUATION_IMPLEMENTATION.md  EVALUATION_PLAN.md  EVALUATION_README.md  EVALUATION_SYSTEM_COMPLETE.md  (+111 more)
evaluation_results_75/: PAPER_RESULTS.md  all_tables.tex  comparison_vs_hyperglm.json  metrics.json  orion_predictions.json  summary.txt  table1_comparison.tex  table2_semantic_uplift.tex  table3_corrections.tex  table4_methodology.tex
hpo_results/: README.md  cis_weights.json  ground_truth_format.json  optimization_20251022_211856.json  optimization_20251022_212021.json  optimization_20251022_212606.json  optimization_20251022_212746.json  optimization_20251022_212953.json  optimization_latest.json  usage_example.py
llava/: pyproject.toml
mlx-vlm/: requirements.txt
notebooks/: VisionEncoder.ipynb  reid_dinov3_evaluation.ipynb
orion/: __init__.py  __main__.py  advanced_detection.py  async_entity_describer.py  async_perception.py  auto_config.py  causal_inference.py  class_correction.py  cli.py  config.py  config_manager.py  contextual_engine.py  embedding_model.py  geometric_reid.py  knowledge_graph.py  llm_contextual_understanding.py  model_manager.py  neo4j_manager.py  object_tracker.py  perception_config.py  perception_engine.py  pipeline.py  pipeline_realtime.py  reid_matcher.py  run_pipeline.py  runtime.py  scene_assembler.py  semantic_slam.py  semantic_uplift.py  settings.py  smart_caption_prioritizer.py  smart_perception.py  spatial_colocation.py  spatial_map_builder.py  spatial_utils.py  temporal_graph_builder.py  tracking_engine.py  video_qa.py
orion-old/: causal_inference.py  class_correction.py  contextual_engine.py  knowledge_graph.py  perception_engine.py  query_config.py  runtime.py  semantic_uplift.py  settings.py  tracking_engine.py  vector_indexing.py
production/: IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PART2.md  INTEGRATION_COMPLETE.md  PART3_COMPLETE.md  QUICKSTART_PART1.md  QUICKSTART_PART2.md  README_INTEGRATED_PIPELINE.md  README_PART1.md  RESTRUCTURE_COMPLETE.md  agents.py  architecture_diagram.py  embedding_model.py  fastvlm_mlx_wrapper.py  fastvlm_wrapper.py  integrated_pipeline.py  neo4j_manager.py  part1_config.py  part1_perception_engine.py  part2_config.py  part2_semantic_uplift.py  part3_agents.py  part3_config.py  perception_config.py  perception_engine.py  query_config.py  query_evaluation.py  run_pipeline.py  semantic_config.py  semantic_uplift.py  test_integrated.py  test_part1.py  test_part2.py  test_part3.py  test_perception.py  test_query.py  test_semantic.py  video_qa.py
research/: DECISION_MATRIX.md  EVALUATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  QUICK_START.md  README.md  RESEARCH_SUMMARY.md
results/: DETECTION_ANALYSIS.md  ag_test10.json  camera_intrinsics.json  entities.json  perception_run.json  slam_trajectory.npy
scripts/: 1_download_75_tao_test.py  1_prepare_ag_data.py  2_download_75_frames.py  2_prepare_ground_truth.py  3_run_orion_ag_eval.py  3_run_orion_eval.py  3b_run_heuristic_baseline_ag_eval.py  3b_run_vot_baseline.py  4_evaluate_ag_predictions.py  4_evaluate_predictions.py  4b_compare_baseline.py  4b_compare_baseline_vs_orion.py  add_semantic_relations.py  aggregate_ag_eval_stats.py  aggregate_gemini_evaluations.py  align_pvsg_relations.py  analyze_data_reliability.py  analyze_detections.py  analyze_full_video_results.py  analyze_overlay_debug.py  analyze_phase1.py  analyze_track_bboxes.py  analyze_tracks.py  analyze_video.py  analyze_with_gemini.py  analyze_with_visualizations.py  bootstrap.sh  bootstrap_fastvlm.sh  calculate_rm_at_k.py  causal_diagnostics.py  check_classes.py  check_dino.py  cleanup_and_test.py  compare_detectors.py  compare_qa.py  compare_reid_methods.py  (+199 more)
(+658 files in other folders)
