[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*", "docs*", "src*"]

[project]
name = "orion"
version = "0.2.0"
description = "Orion v2: Memory-centric video understanding with YOLO-World, V-JEPA2, and semantic filtering"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Riddhiman Rana", email = "riddhiman.rana@gmail.com"},
    {name = "Aryav Semwal", email = "aryavsemwal17@gmail.com"},
    {name = "Yogesh Atluru", email = "yatluru@gmail.com"},
]
keywords = ["research", "orion", "computer-vision", "transformers", "video-understanding", "re-id"]
dependencies = [
    "torch==2.6.0", "torchvision==0.21.0",
    "transformers>=4.47.1", "tokenizers==0.21.0",
    "numpy==1.26.4", "scikit-learn==1.2.2", "opencv-python>=4.8.0",
    "timm==1.0.15", "einops==0.6.1", "ultralytics==8.3.217",
    "hdbscan", "mediapipe>=0.10.14", "pillow>=10.0.0", "rich",
    # Phase 1 additions
    "scipy>=1.10.0",  # For Hungarian algorithm in tracker
    "shapely>=2.0.0",  # For spatial zone geometry
    # Phase 3 additions
    "sentence-transformers>=2.2.0",  # For semantic filtering (all-mpnet-base-v2)
    # Phase 5 additions
    "google-generativeai>=0.8.0",  # For Gemini validation
]

[project.optional-dependencies]
# Optional modules (install as needed)
apple = ["mlx-vlm @ file:./mlx-vlm"]
memgraph = ["pymgclient>=1.0.0"]  # Memgraph driver (Bolt protocol)
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0"
]

# All extras
all = ["neo4j>=5.0.0", "pytest>=7.0.0", "jupyter>=1.0.0", "ipywidgets>=8.0.0"]

[project.urls]
Repository = "https://github.com/riddhimanrana/orion-research"
Issues = "https://github.com/riddhimanrana/orion-research/issues"

[project.scripts]
orion = "orion.cli:main"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "src",
    "src/**",
    "docs/_archive",
    "docs/_archive/**",
]

[tool.isort]
profile = "black"
skip = [
    "src",
    "src/**",
    "docs/_archive",
    "docs/_archive/**",
    "build",
    "dist",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "src",
    "src/**",
    "docs/_archive",
    "docs/_archive/**",
]
