[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "LLaVA - FastVLM custom implementation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.0",
    "tokenizers>=0.21.0",
    "sentencepiece>=0.1.99",
    "accelerate>=1.6.0",
    "peft>=0.10.0,<0.14.0",
    "einops>=0.6.1",
    "einops-exts>=0.0.4",
    "timm>=1.0.15",
    "pillow>=11.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llava*"]
